0.9.3.0 (not yet released)
- updated HyperRecord version numbers to match Hypertable release number
- now compatible with Hypertable version 0.9.3.0
  - no longer compatible with earlier Hypertable versions due to a Thrift
    API change

0.2.8 (2010/03/01)
- support friendly migration-syntax declared using blocks
- new assemble_row_key_from_attributes that generates row keys in the same 
  order declared in row_key_attributes
- cache row_key_attributes results so that regex is not constantly
  reevaluated for same value
- new :instantiate_only_requested_columns finder option that does not
  instantiate object columns if they were not included in the :select
  - makes large queries against large tables memory-friendly
- :select option allows column families to be identified using symbols
- tests and groundwork for mutator flush_interval (asynchronous writes)
  - requires Hypertable 0.9.2.7
- fix bug in with_thrift_client invocation
- update tests to be compatible with Rails 2.3.4
- update tests to be compatible with RSpec 1.2.8

0.2.7 2009/10/01
- new row_key_attributes method: allows parts of the row key to be extracted
  into attributes on the instantiated object
- retry block of write_cells was occasionally attemption to write to a
  closed mutator (causing an exception)
- support mutators with auto-flush
  - update Thrift-generated ruby code to code supplied in Hypertable 0.9.2.6
- some exceptions in write_cells method were being masked by exceptions in 
  ensure block, making it difficult to identify root cause of problem
- fix potential infinite loop in each_row
- handle deleted columns in schema operations
  - hypertable deletes columns lazily, so they will still show up in the output
    from schema commands.

0.2.6 2009/04/20
- fix bug interacting with new open_scanner API

0.2.5 2009/04/20
- added methods to raw ruby thrift client for iterating over large results
  - each_cell_as_arrays
  - each_row (still has bug in underlying code)